--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                         <h3 class="text-xl font-black text-slate-800 flex items-center gap-3 tracking-tight uppercase royal-font"><i class="fas fa-crown text-emerald-600"></i> Admin Panel</h3>
                         <div class="flex flex-wrap gap-3">
                             <button onclick="window.exportToCSV()" class="bg-emerald-50 px-5 py-3 rounded-2xl text-emerald-700 text-[10px] font-black hover:bg-emerald-100 transition-all flex items-center gap-2 uppercase tracking-widest shadow-sm">
-                                <i class="fas fa-file-csv"></i> EKSPOR PESERTA
+                                <i class="fas fa-users"></i> EKSPOR PENDAFTAR
                             </button>
                             <button onclick="window.exportAttendanceToCSV()" class="bg-blue-50 px-5 py-3 rounded-2xl text-blue-700 text-[10px] font-black hover:bg-blue-100 transition-all flex items-center gap-2 uppercase tracking-widest shadow-sm border border-blue-100">
                                 <i class="fas fa-clipboard-user"></i> EKSPOR ABSENSI
@@ -990,6 +990,7 @@
         };
 
         window.exportToCSV = () => {
+            if (state.participants.length === 0) return alert("Belum ada data pendaftar!");
             const rows = state.participants.map(p => [`"${p.name}"`, `"${p.status}"`, `"${p.marga}"`, `"${p.qrCode}"`]);
             let csv = "\ufeffNama,Kategori,Marga,Kode\n" + rows.map(e => e.join(",")).join("\n");
             const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
