--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
             tempUser: null,
             filterStatus: "Semua",
             adminSearchQuery: "",
+            reportSearchQuery: "",
             isProcessingScan: false,
             charts: {}
         };
@@ -516,7 +517,10 @@
                 renderDataTable();
                 renderStaffList();
             }
-            if(state.tab === 'report') renderLiveReport();
+            if(state.tab === 'report') {
+                renderLiveReport();
+                renderReportTable();
+            }
             
             setTimeout(() => document.getElementById('loading')?.classList.add('hidden'), 500);
         }
@@ -778,6 +782,20 @@
                     </div>
                     <div class="absolute inset-0 bg-white/5 pointer-events-none"></div>
                 </div>
+
+                <!-- Report Detail Table Section -->
+                <div class="bg-white p-8 rounded-[2.5rem] shadow-2xl border border-slate-100 overflow-hidden">
+                    <div class="flex flex-wrap justify-between items-center gap-5 mb-8">
+                        <h4 class="text-sm font-black text-slate-800 uppercase tracking-widest flex items-center gap-3">
+                            <i class="fas fa-list-check text-emerald-600"></i> Detail Kehadiran Peserta
+                        </h4>
+                        <div class="relative w-full md:w-64">
+                            <input type="text" onkeyup="window.handleReportSearch(this.value)" placeholder="CARI PESERTA..." class="form-input w-full rounded-2xl py-3 px-10 text-[10px] font-black uppercase shadow-sm">
+                            <i class="fas fa-search absolute left-4 top-1/2 -translate-y-1/2 text-slate-300 text-[10px]"></i>
+                        </div>
+                    </div>
+                    <div id="reportTableContainer" class="overflow-x-auto custom-scrollbar"></div>
+                </div>
             </div>`;
 
             const ctx = document.getElementById('categoryChart').getContext('2d');
@@ -804,7 +822,52 @@
                     cutout: '70%'
                 }
             });
+            renderReportTable();
         }
+
+        window.renderReportTable = () => {
+            const container = document.getElementById('reportTableContainer');
+            if(!container) return;
+            
+            let filtered = state.participants;
+            if(state.reportSearchQuery) {
+                filtered = filtered.filter(p => p.name.toLowerCase().includes(state.reportSearchQuery));
+            }
+
+            container.innerHTML = `
+            <table class="w-full text-left text-[10px]">
+                <thead class="bg-slate-50 text-slate-400 font-black uppercase tracking-widest border-b border-slate-100">
+                    <tr><th class="p-4">Nama Peserta</th><th class="p-4">Kategori</th><th class="p-4">Status</th><th class="p-4">Waktu Hadir</th></tr>
+                </thead>
+                <tbody class="divide-y divide-slate-50">
+                    ${filtered.map(p => {
+                        const attendData = state.attendance.find(a => a.qrCode === p.qrCode);
+                        const isPresent = !!attendData;
+                        return `
+                        <tr>
+                            <td class="p-4">
+                                <div class="font-black text-slate-800 text-xs uppercase">${p.name}</div>
+                                <div class="text-[8px] font-bold text-slate-400 uppercase mt-1">${p.marga}</div>
+                            </td>
+                            <td class="p-4"><span class="font-bold text-slate-500 uppercase">${p.status}</span></td>
+                            <td class="p-4">
+                                ${isPresent 
+                                    ? `<span class="bg-emerald-100 text-emerald-700 px-3 py-1 rounded-full font-black text-[9px] uppercase tracking-wider flex items-center gap-2 w-fit"><i class="fas fa-check-circle"></i> HADIR</span>`
+                                    : `<span class="bg-slate-100 text-slate-400 px-3 py-1 rounded-full font-black text-[9px] uppercase tracking-wider flex items-center gap-2 w-fit">BELUM HADIR</span>`
+                                }
+                            </td>
+                            <td class="p-4 font-mono font-bold text-slate-500">${isPresent ? attendData.timestamp : '-'}</td>
+                        </tr>`;
+                    }).join('')}
+                    ${filtered.length === 0 ? '<tr><td colspan="4" class="p-10 text-center text-slate-300 font-black uppercase tracking-widest">Data tidak ditemukan</td></tr>' : ''}
+                </tbody>
+            </table>`;
+        };
+
+        window.handleReportSearch = (val) => {
+            state.reportSearchQuery = val.toLowerCase().trim();
+            renderReportTable();
+        };
 
         // --- ADMIN PANEL ---
         function renderAdminPanel() {
