--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -449,6 +448,56 @@
             });
         };
 
+        // --- NAVIGATION & TICKET AUTH ---
+        // Pindahkan setTab dan handleTicketAuth ke sini agar tidak duplikat dan mudah diakses
+        const setTab = async (t) => {
+            if (state.scanner) { try { await state.scanner.stop(); } catch (e) {} state.scanner = null; }
+            state.tab = t;
+            document.querySelectorAll('.nav-btn').forEach(btn => btn.classList.toggle('active', btn.id === `nav-${t}`));
+            if (t === 'register') renderRegister();
+            else if (t === 'find') {
+                const area = document.getElementById('content-area');
+                if(!area) return;
+                area.innerHTML = `
+                    <div class="bg-white rounded-[2.5rem] p-10 md:p-16 shadow-2xl text-center border border-slate-100 animate-[modalUp_0.4s]">
+                        <div class="w-24 h-24 bg-emerald-50 rounded-[2rem] flex items-center justify-center mx-auto mb-10 text-emerald-600 text-4xl shadow-inner"><i class="fas fa-magnifying-glass"></i></div>
+                        <h3 class="font-black text-2xl mb-10 text-slate-800 uppercase royal-font tracking-tight">Temukan Undangan</h3>
+                        <div class="space-y-6"><input id="findIn" type="text" placeholder="Masukkan Nama Lengkap Anda" class="form-input w-full rounded-2xl p-6 text-center font-black uppercase text-lg shadow-inner"><button id="btnFind" class="w-full bg-emerald-700 text-white rounded-[1.5rem] py-6 font-black hover:bg-emerald-800 transition-all shadow-2xl uppercase tracking-[0.2em]">CARI TIKET</button></div>
+                    </div>
+                `;
+                const findBtn = document.getElementById('btnFind');
+                if(findBtn) {
+                    findBtn.onclick = () => {
+                        const q = document.getElementById('findIn').value.trim().toLowerCase();
+                        if (!q) return alert("Masukkan nama!");
+                        const found = state.participants.filter(p => p.name.toLowerCase().includes(q));
+                        if (!found.length) return alert("Data tidak ditemukan!");
+                        
+                        if (found.length === 1) {
+                            handleTicketAuth(found[0]); 
+                        } else {
+                            handleMultipleFound(found);
+                        }
+                    };
+                }
+            }
+            else if (t === 'scan' || t === 'gift') renderScan(t);
+            else if (t === 'report') renderReport();
+            else if (t === 'data') renderAdmin();
+        };
+
+        const handleTicketAuth = (user) => {
+            const html = `<h3 class="text-2xl font-black text-slate-800 text-center uppercase royal-font mb-4 tracking-tight">Verifikasi</h3><p class="text-[10px] text-slate-400 font-black text-center mb-8 uppercase tracking-widest">Masukkan PIN untuk <span class="text-emerald-600">${user.name}</span></p><input type="password" id="pinAuth" inputmode="numeric" maxlength="8" class="form-input w-full rounded-2xl p-6 text-center text-4xl font-black mb-8 tracking-[0.5em] shadow-inner" placeholder="••••••••"><div class="grid grid-cols-2 gap-4"><button onclick="document.getElementById('authModal').classList.add('hidden')" class="py-5 border-2 border-slate-100 rounded-2xl font-black text-slate-400 uppercase tracking-widest text-xs">Batal</button><button id="btnVerify" class="py-5 bg-emerald-600 text-white rounded-2xl font-black shadow-xl uppercase tracking-widest text-xs">KONFIRMASI</button></div>`;
+            openModal(html, 'authModal');
+            const verifyBtn = document.getElementById('btnVerify');
+            if(verifyBtn) {
+                verifyBtn.onclick = () => { 
+                    const pin = document.getElementById('pinAuth').value; 
+                    if (pin === user.password) { closeModal('authModal'); window.showTicket(user); } else alert("PIN Salah!"); 
+                };
+            }
+        };
+
         // --- TICKET VIEW ---
         window.showTicket = async (user) => {
             state.activeUser = user;
@@ -487,6 +536,35 @@
             const dlBtn = document.getElementById('btnDlTicket');
             if(editBtn) editBtn.onclick = () => openEditUserModal(user);
             if(dlBtn) dlBtn.onclick = handleDownloadTicket;
+        };
+
+        // NEW: Handle Duplicate Names with Selection Modal
+        const handleMultipleFound = (list) => {
+            const html = `
+                <h3 class="text-xl font-black text-slate-800 text-center uppercase royal-font mb-2">Pilih Data Anda</h3>
+                <p class="text-[10px] text-slate-400 font-black text-center mb-6 uppercase tracking-widest">Ditemukan ${list.length} nama serupa</p>
+                <div class="space-y-3 max-h-[50vh] overflow-y-auto pr-1 no-scrollbar">
+                    ${list.map(p => `
+                        <button onclick="window.selectDuplicate('${p.firebaseId}')" class="w-full bg-slate-50 p-4 rounded-2xl border border-slate-100 hover:bg-emerald-50 hover:border-emerald-200 transition-all text-left group relative overflow-hidden">
+                            <div class="font-black text-slate-800 text-sm uppercase group-hover:text-emerald-700 relative z-10">${p.name}</div>
+                            <div class="flex items-center gap-2 mt-2 relative z-10">
+                                <span class="text-[9px] font-black text-white bg-slate-400 px-3 py-1 rounded-full uppercase group-hover:bg-emerald-500 transition-colors">${p.marga}</span>
+                                <span class="text-[9px] font-bold text-slate-500 uppercase group-hover:text-emerald-600 transition-colors">${p.status}</span>
+                            </div>
+                        </button>
+                    `).join('')}
+                </div>
+                <div class="mt-6">
+                    <button onclick="document.getElementById('duplicateModal').classList.add('hidden')" class="w-full py-4 border-2 border-slate-100 rounded-2xl font-black text-slate-400 uppercase tracking-widest text-xs hover:bg-slate-50">Batal</button>
+                </div>
+            `;
+            openModal(html, 'duplicateModal');
+        };
+
+        window.selectDuplicate = (id) => {
+            closeModal('duplicateModal');
+            const user = state.participants.find(p => p.firebaseId === id);
+            if(user) handleTicketAuth(user);
         };
 
         const openEditUserModal = (user) => {
@@ -820,49 +898,6 @@
                     setTimeout(() => { if(msg) msg.classList.add('hidden'); state.isProcessingScan = false; }, 3000); 
                 } else { state.isProcessingScan = false; }
             });
-        };
-
-        // --- NAVIGATION ---
-        const setTab = async (t) => {
-            if (state.scanner) { try { await state.scanner.stop(); } catch (e) {} state.scanner = null; }
-            state.tab = t;
-            document.querySelectorAll('.nav-btn').forEach(btn => btn.classList.toggle('active', btn.id === `nav-${t}`));
-            if (t === 'register') renderRegister();
-            else if (t === 'find') {
-                const area = document.getElementById('content-area');
-                if(!area) return;
-                area.innerHTML = `
-                    <div class="bg-white rounded-[2.5rem] p-10 md:p-16 shadow-2xl text-center border border-slate-100 animate-[modalUp_0.4s]">
-                        <div class="w-24 h-24 bg-emerald-50 rounded-[2rem] flex items-center justify-center mx-auto mb-10 text-emerald-600 text-4xl shadow-inner"><i class="fas fa-magnifying-glass"></i></div>
-                        <h3 class="font-black text-2xl mb-10 text-slate-800 uppercase royal-font tracking-tight">Temukan Undangan</h3>
-                        <div class="space-y-6"><input id="findIn" type="text" placeholder="Masukkan Nama Lengkap Anda" class="form-input w-full rounded-2xl p-6 text-center font-black uppercase text-lg shadow-inner"><button id="btnFind" class="w-full bg-emerald-700 text-white rounded-[1.5rem] py-6 font-black hover:bg-emerald-800 transition-all shadow-2xl uppercase tracking-[0.2em]">CARI TIKET</button></div>
-                    </div>
-                `;
-                const findBtn = document.getElementById('btnFind');
-                if(findBtn) {
-                    findBtn.onclick = () => {
-                        const q = document.getElementById('findIn').value.trim().toLowerCase();
-                        const found = state.participants.filter(p => p.name.toLowerCase().includes(q));
-                        if (!found.length) return alert("Data tidak ditemukan!");
-                        if (found.length === 1) handleTicketAuth(found[0]); else alert("Ketik Nama Lebih Lengkap!");
-                    };
-                }
-            }
-            else if (t === 'scan' || t === 'gift') renderScan(t);
-            else if (t === 'report') renderReport();
-            else if (t === 'data') renderAdmin();
-        };
-
-        const handleTicketAuth = (user) => {
-            const html = `<h3 class="text-2xl font-black text-slate-800 text-center uppercase royal-font mb-4 tracking-tight">Verifikasi</h3><p class="text-[10px] text-slate-400 font-black text-center mb-8 uppercase tracking-widest">Masukkan PIN untuk <span class="text-emerald-600">${user.name}</span></p><input type="password" id="pinAuth" inputmode="numeric" maxlength="8" class="form-input w-full rounded-2xl p-6 text-center text-4xl font-black mb-8 tracking-[0.5em] shadow-inner" placeholder="••••••••"><div class="grid grid-cols-2 gap-4"><button onclick="document.getElementById('authModal').classList.add('hidden')" class="py-5 border-2 border-slate-100 rounded-2xl font-black text-slate-400 uppercase tracking-widest text-xs">Batal</button><button id="btnVerify" class="py-5 bg-emerald-600 text-white rounded-2xl font-black shadow-xl uppercase tracking-widest text-xs">KONFIRMASI</button></div>`;
-            openModal(html, 'authModal');
-            const verifyBtn = document.getElementById('btnVerify');
-            if(verifyBtn) {
-                verifyBtn.onclick = () => { 
-                    const pin = document.getElementById('pinAuth').value; 
-                    if (pin === user.password) { closeModal('authModal'); window.showTicket(user); } else alert("PIN Salah!"); 
-                };
-            }
         };
 
         // --- DATA LISTENERS ---
