--- a/index.html
+++ b/index.html
@@ -546,8 +546,11 @@
                 <div class="space-y-3 max-h-[50vh] overflow-y-auto pr-1 no-scrollbar">
                     ${list.map(p => `
                         <button onclick="window.selectDuplicate('${p.firebaseId}')" class="w-full bg-slate-50 p-4 rounded-2xl border border-slate-100 hover:bg-emerald-50 hover:border-emerald-200 transition-all text-left group relative overflow-hidden">
-                            <div class="font-black text-slate-800 text-sm uppercase group-hover:text-emerald-700 relative z-10">${p.name}</div>
-                            <div class="flex items-center gap-2 mt-2 relative z-10">
+                            <div class="flex justify-between items-start mb-2">
+                                <div class="font-black text-slate-800 text-sm uppercase group-hover:text-emerald-700 relative z-10">${p.name}</div>
+                                <div class="text-[10px] font-mono font-bold text-slate-400 bg-white border border-slate-200 px-2 py-1 rounded-lg group-hover:text-emerald-600 group-hover:border-emerald-200 shadow-sm">${p.qrCode}</div>
+                            </div>
+                            <div class="flex items-center gap-2 relative z-10">
                                 <span class="text-[9px] font-black text-white bg-slate-400 px-3 py-1 rounded-full uppercase group-hover:bg-emerald-500 transition-colors">${p.marga}</span>
                                 <span class="text-[9px] font-bold text-slate-500 uppercase group-hover:text-emerald-600 transition-colors">${p.status}</span>
                             </div>
